objects/com_smartsheet__DL_Config__c.object
<CustomObject>
    <fields>
        <fullName>com_smartsheet__direction__c</fullName>
        <label>direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>import</fullName>
                </value>
                <value>
                    <fullName>export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>com_smartsheet__jobName__c</fullName>
        <defaultValue>&apos;No Name&apos;</defaultValue>
        <description>The optional name of the job</description>
        <label>jobName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__objectName__c</fullName>
        <description>account, lead, etc</description>
        <label>objectName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__seenByUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>seenByUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__sheetId__c</fullName>
        <label>sheetId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__sheetName__c</fullName>
        <label>sheetName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__sheetPermalink__c</fullName>
        <label>sheetPermalink</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__whereClause__c</fullName>
        <description>soql where clause</description>
        <label>whereClause</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DL_Config</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DL_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>